Releasing improved